@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<addon id="plugin.video.drnu" version="6.0.0+matrix.1" name="DR TV" provider-name="TermeHansen">
+<addon id="plugin.video.drnu" version="6.0.2+matrix.1" name="DR TV" provider-name="TermeHansen">
     <requires>
         <import addon="xbmc.python" version="3.0.0"/>
         <import addon="script.module.dateutil" version="2.8.2" />
@@ -27,6 +27,17 @@
             <icon>resources/icon.png</icon>
             <fanart>resources/fanart.jpg</fanart>
        </assets>
+       <news>[B]Version 6.0.2 - 2022-10-12[/B]
+        - fix bug when fetching paged lists
+        - fix bug for documentaries category
+        - added top spinner item to home screen
+        - added use of local subtitle files
+       </news>
+       <news>[B]Version 6.0.1 - 2022-09-19[/B]
+       - fix bug for live streams in menu items     
+       - added simple area menu option
+       - added getting schedules for up to 7 days 
+       </news>
        <news>[B]Version 6.0.0 - 2022-09-01[/B]
        - Major code re-factor for new API from dr.dk
        </news>
