@@ -1,3 +1,14 @@
+[B]Version 6.0.2 - 2022-10-12[/B]
+- fix bug when fetching paged lists
+- fix bug for documentaries category
+- added top spinner item to home screen
+- added use of local subtitle files
+
+[B]Version 6.0.1 - 2022-09-19[/B]
+- fix bug for live streams in menu items
+- added simple area menu option
+- added getting schedules for up to 7 days
+
 [B]Version 6.0.0 - 2022-09-01[/B]
 - Major code re-factor for new API from dr.dk
 
